--- a/package.json
+++ b/package.json
@@ -18,5 +18,14 @@
   },
   "bugs": {
     "url": "https://github.com/Programie/SearchQueryParser-js/issues"
+  },
+  "volta": {
+    "node": "22.16.0"
+  },
+  "scripts": {
+    "test": "vitest"
+  },
+  "devDependencies": {
+    "vitest": "^3.1.4"
   }
 }
