--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,5 +11,5 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: volta-cli/action@v4
-      - run: npm install
+      - run: npm ci
       - run: npm test
