--- a/package.json
+++ b/package.json
@@ -23,9 +23,14 @@
     "node": "22.16.0"
   },
   "scripts": {
+    "build": "rollup -c",
     "test": "vitest"
   },
   "devDependencies": {
+    "@rollup/plugin-typescript": "^12.1.2",
+    "rollup-plugin-terser": "^7.0.2",
+    "tslib": "^2.8.1",
+    "typescript": "^5.8.3",
     "vitest": "^3.1.4"
   }
 }
