--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -12,6 +12,8 @@ jobs:
       - uses: volta-cli/action@v4
       - run: npm ci
       - run: npm run build
+      - id: extract-release-notes
+        uses: ffurrer2/extract-release-notes@v2
       - uses: actions/upload-artifact@v4
         with:
           path: |
