--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -13,6 +13,7 @@ jobs:
       - run: npm ci
       - run: npm run build
       - uses: actions/upload-artifact@v4
+        name: package
         with:
           path: |
             dist
@@ -30,6 +31,8 @@ jobs:
 
     steps:
       - uses: actions/download-artifact@v4
+        with:
+          name: package
       - run: ls -laR
       - uses: volta-cli/action@v4
       - id: extract-release-notes
