--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -33,13 +33,12 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: package
-      - run: ls -laR
       - uses: volta-cli/action@v4
       - id: extract-release-notes
         uses: ffurrer2/extract-release-notes@v2
-      #- uses: softprops/action-gh-release@v2
-      #  with:
-      #    body: ${{ steps.extract-release-notes.outputs.release_notes }}
-      #- run: npm publish
-      #  env:
-      #    NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - uses: softprops/action-gh-release@v2
+        with:
+          body: ${{ steps.extract-release-notes.outputs.release_notes }}
+      - run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
